--- a/Service.Scheduler.Tests/Service.Scheduler.Tests.csproj
+++ b/Service.Scheduler.Tests/Service.Scheduler.Tests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="ProcessDataTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchedulerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Shadow Include="Test References\DemoService.Scheduler.accessor" />
