--- a/UITests/UITests.csproj
+++ b/UITests/UITests.csproj
@@ -62,14 +62,9 @@
     <Compile Include="Common\TestDataExtractor.cs" />
     <Compile Include="Global\GlobalValues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestData\LoginData.cs" />
-    <Compile Include="TestData\PermissionsData.cs" />
-    <Compile Include="TestData\SearchData.cs" />
+    <Compile Include="TestData\SampleData.cs" />
     <Compile Include="Tests\SampleTests.cs" />
-    <Compile Include="UIMapping\AdminPage.cs" />
-    <Compile Include="UIMapping\CommonMaps.cs" />
-    <Compile Include="UIMapping\LoginPage.cs" />
-    <Compile Include="UIMapping\PermissionsPage.cs" />
+    <Compile Include="UIMapping\SamplePage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Screenshots\" />
